--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
   
 
 dev_dependencies:
+  build_runner: ^2.4.13
+  custom_lint: ^0.7.0
   flutter_test:
     sdk: flutter
   lint: ^2.3.0
+  riverpod_generator: ^2.6.3
+  riverpod_lint: ^2.6.3
 
 flutter:
   uses-material-design: true
