--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
+  freezed_annotation: ^2.4.4
   go_router: ^14.8.0
   riverpod_annotation: ^2.6.1
   
@@ -19,6 +20,7 @@ dev_dependencies:
   custom_lint: ^0.7.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.7
   lint: ^2.3.0
   riverpod_generator: ^2.6.3
   riverpod_lint: ^2.6.3
