--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,11 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   go_router: ^14.8.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
   local_auth: ^2.3.0
+  path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
   
 
