--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
+  intl: ^0.20.2
   local_auth: ^2.3.0
   path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
