--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   local_auth: ^2.3.0
   path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
+  shared_preferences: ^2.5.3
   
 
 dev_dependencies:
