--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fixedfundsflows
-description: "A new Flutter project."
+description: "Know where your money flows"
 publish_to: 'none'
 version: 0.1.0
 
@@ -7,11 +7,11 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
-  fl_chart: ^0.70.2
+  fl_chart: ^1.0.0
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
-  go_router: ^14.8.0
+  go_router: ^15.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
