--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,14 @@ dependencies:
   fl_chart: ^1.0.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_riverpod: ^2.6.1
   go_router: ^15.1.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.1
-  intl: ^0.20.2
+  intl: ^0.19.0
   local_auth: ^2.3.0
   path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
