--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   local_auth: ^2.3.0
   path_provider: ^2.1.5
   riverpod_annotation: ^2.6.1
+  share_plus: ^11.0.0
   shared_preferences: ^2.5.3
   
 
